# Elaborato_programmazione

./: Activity.cpp  Activity.h  ActivityLog.cpp  ActivityLog.h  CMakeLists.txt  DialogAddActivity.cpp  DialogAddActivity.h  DialogAddDay.cpp  DialogAddDay.h  DialogViewActivity.cpp  DialogViewActivity.h  MainFrame.cpp  MainFrame.h  Time.cpp  Time.h  main.cpp
Google_tests/: ActivityLogTest.cpp  ActivityTest.cpp  CMakeLists.txt  TimeTest.cpp
